# superme-sdk

./: .env.example  .gitignore  404.html  CNAME  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
api/auth/: index.html
api/chat/: index.html
api/client/: index.html
api/low_level/: index.html
api/models/: index.html
api/streaming/: index.html
docs/: 404.html  index.html  index.md  objects.inv  sitemap.xml
docs-src/api/: chat.md
docs/api/: auth.md  chat.md  client.md  low_level.md  models.md  streaming.md
docs/search/: search_index.json
examples/: advanced_example.py  mcp_example.py  simple_example.py
network_guidelines/: content_grounding.md  content_quality.md
search/: search_index.json
superme_sdk/: __init__.py  _async_http.py  _chat_proxy.py  _companies.py  _groups.py  _http.py  _social.py  _sse.py  auth.py  client.py  exceptions.py  models.py  streaming.py
superme_sdk/_transport/: __init__.py  _chat_proxy.py  _http.py  _ndjson.py  _sse.py  _terminals.py
superme_sdk/aio/: __init__.py  _http.py
superme_sdk/cli/: __init__.py  commands.py  parser.py  utils.py
superme_sdk/network_guidelines/: README.md  post_quality_evaluation.md  trust_and_safety.md
tests/: conftest.py  test_agentic_resume.py  test_async_client.py  test_auth.py  test_backward_compat.py  test_cli.py  test_cli_live.py  test_client.py  test_interviews.py  test_library.py  test_live.py  test_partner_streaming.py  test_workgroups.py  test_working_groups.py
(+62 files in other folders)
