[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superme-sdk"
version = "0.1.0"
description = "Python SDK for SuperMe AI API with OpenAI-compatible interface"
readme = "README.md"
authors = [
    {name = "SuperMe", email = "support@superme.ai"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["superme", "ai", "openai", "sdk", "api"]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "respx>=0.21.0",
    "ruff>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/superme-ai/superme-sdk"
Documentation = "https://github.com/superme-ai/superme-sdk#readme"
Repository = "https://github.com/superme-ai/superme-sdk"
"Bug Tracker" = "https://github.com/superme-ai/superme-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["superme_sdk*"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
